Removed depends_on key, forced rhide to run on deploying host, and added run scripts

--- a/rhide.yml
+++ b/rhide.yml
@@ -15,6 +15,7 @@ services:
       placement:
         constraints:
           - node.role == manager
+          - node.hostname == $HOSTNAME
       restart_policy:
         condition: none
     networks:
